cargo-features = ["strip"]

[package]
name = "rustkbd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
atmega-hal = { git = "https://github.com/Rahix/avr-hal", branch = "main", features = ["atmega32u4", "rt"] }
avr_delay = "0.3.2"
avr-progmem = "0.1.2"
avr-device = "0.3.2"
embedded-hal = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
