[package]
name = "main"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

[[bin]]
name = "rustkbd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
keyboard-core = { path = "../keyboard-core" }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
heapless = "0.7.10"
rp-pico = "0.2.0"
cortex-m = "0.7.4"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
usb-device = "0.2.8"
display-interface = "0.4.1"
