[package]
name = "necoboard-petit-ec"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd = { path = "../rustkbd" }
heapless = "0.7.16"
rp-pico = "0.5.0"
rp2040-hal = { version = "0.6.0", features = ["eh1_0_alpha"] }
cortex-m = "0.7.6"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
usb-device = "0.2.9"
nb = "1.0.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
fugit = "0.3.6"
