[package]
name = "necoboard-petit-ec"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd = { path = "../rustkbd" }
heapless = "0.8.0"
rp-pico = "0.8.0"
rp2040-hal = "0.9.1"
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = ["unproven"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
usb-device = "0.2.9"
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
