[package]
name = "necoboard-petit-ec"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd = { path = "../rustkbd" }
heapless = "0.8.0"
rp-pico = { git = "https://github.com/rp-rs/rp-hal-boards", rev = "3fdd6135d319c5a9fe37014d3623980335526c71" }
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = ["unproven"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
usb-device = "0.3.2"
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
