[package]
name = "necoboard-petit"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd-core = { path = "../rustkbd-core" }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
heapless = "0.7.15"
rp-pico = "0.4.1"
rp2040-hal = { version = "0.5.0", features = ["eh1_0_alpha"] }
cortex-m = "0.7.5"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
usb-device = "0.2.8"
display-interface = "0.4.1"
nb = "1.0.0"
snafu = { version = "0.7.1", default-features = false }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
