[package]
name = "necoboard-v1"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd = { path = "../rustkbd" }
heapless = "0.8.0"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.2", features = ["eh1_0_alpha"] }
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
usb-device = "0.2.9"
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
rp2040-hal-macros = "0.1.0"
fugit = "0.3.7"
