[package]
name = "rustkbd-core"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.15"
embedded-hal = "0.2.7"
usbd-hid = "0.6.0"
usb-device = "0.2.8"
usbd-hid-macros = "0.5.2"
nb = "1.0.0"
embedded-time = "0.12.1"
snafu = { version = "0.7.1", default-features = false }
defmt = "0.3.2"
rustkbd-derive = { path = "../rustkbd-derive" }
