[package]
name = "rustkbd"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { git = "https://github.com/japaric/heapless", rev = "97ac129ba4344820e9fedb8a0fc7f11d5bf652a6", default-features = false }
embedded-hal = "0.2.7"
usbd-hid = "0.6.0"
usb-device = "0.2.9"
usbd-hid-macros = "0.5.2"
nb = "1.0.0"
defmt = "0.3.2"
rustkbd-macros = { path = "../rustkbd-macros" }
