[package]
name = "rustkbd"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", default-features = false }
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7" }
usbd-hid = "0.6.1"
usb-device = "0.2.9"
usbd-hid-macros = "0.6.0"
nb = "1.1.0"
defmt = "0.3.6"
rustkbd-macros = { path = "../rustkbd-macros" }
